code25_all/scala/9060824.txt
  implicit def strToInt2(str: String):Int = {
    str.toInt
  }

<console>:9: error: type mismatch;
 found   : str.type (with underlying type String)
 required: ?{val toInt: ?}
Note that implicit conversions are not applicable because they are ambiguous:
 both method augmentString in object Predef of type (x: String)scala.collection.
immutable.StringOps
 and method toi in object $iw of type (str: String)Int
 are possible conversion functions from str.type to ?{val toInt: ?}
           str.toInt
           ^

  implicit def strToInt2(str: String) = {
    str.toInt
  }

